[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/sliding_menu/MenuWithButtons.gd" type="Script" id=1]
[ext_resource path="res://components/sliding_menu/MenuSlideOutAni.tres" type="Animation" id=2]
[ext_resource path="res://addons/github-integration/fonts/SEGOEUIB.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
resource_name = "Slide In"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 402, 0 ), Vector2( -80, 0 ), Vector2( -100, 0 ), Vector2( -80, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelContainer/HBoxContainer/ButtonAndText/Menubuttons:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="MenuWithButtons" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1023.0
margin_right = 1.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 0.48, 0.39, 0.39, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1129.63
margin_right = -585.629
margin_bottom = 482.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 537.0
margin_bottom = 475.0
size_flags_vertical = 3

[node name="ButtonAndText2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 468.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 1

[node name="HideMenu" type="Button" parent="PanelContainer/HBoxContainer/ButtonAndText2"]
margin_top = 177.0
margin_right = 69.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 6 )
text = ">"

[node name="ButtonAndText" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 530.0
margin_bottom = 468.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Menubuttons" type="VBoxContainer" parent="PanelContainer/HBoxContainer/ButtonAndText"]
margin_right = 457.0
margin_bottom = 468.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons"]
margin_right = 457.0
margin_bottom = 114.0
size_flags_vertical = 3

[node name="Start Button" type="Button" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer"]
margin_right = 457.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons"]
margin_top = 118.0
margin_right = 457.0
margin_bottom = 232.0
size_flags_vertical = 3

[node name="Stop Run" type="Button" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer2"]
margin_right = 457.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Stop"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons"]
margin_top = 236.0
margin_right = 457.0
margin_bottom = 350.0
size_flags_vertical = 3

[node name="Settings" type="Button" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer3"]
margin_right = 457.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Optionen"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons"]
margin_top = 354.0
margin_right = 457.0
margin_bottom = 468.0
size_flags_vertical = 3

[node name="Main Menu" type="Button" parent="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer4"]
margin_right = 457.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Hauptmen√º"

[node name="MwBAnimator" type="AnimationPlayer" parent="."]
anims/MenuSlideOut = ExtResource( 2 )
"anims/Slide In" = SubResource( 1 )

[connection signal="button_up" from="PanelContainer/HBoxContainer/ButtonAndText2/HideMenu" to="." method="_on_HideMenu_button_up"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer/Start Button" to="." method="_on_Start_Button_button_up"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer2/Stop Run" to="." method="_on_Stop_Run_button_up"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/ButtonAndText/Menubuttons/HBoxContainer4/Main Menu" to="." method="_on_Main_Menu_button_up"]
